CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

AUX_SOURCE_DIRECTORY(. CURRENT_DIR_SRCS)
ADD_LIBRARY(module_tengine ${CURRENT_DIR_SRCS})
TARGET_LINK_LIBRARIES(module_tengine module_common ${TENGINE_LIBS})

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
    FILES_MATCHING
    PATTERN "*.h"
    PATTERN "*.hpp"
    PATTERN "CMakeLists.txt" EXCLUDE
    )

INSTALL(TARGETS module_tengine
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)
